# torch-ngp

./: pyproject.toml
torch_ngp/nerf/: network.py
