[tool.poetry]
name = "torch-ngp"
version = "0.1.0"
description = "A pytorch implementation of SDF and NeRF with instant ngp"
authors = ["ashawkey"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "ffmlp"},
  {include = "freqencoder"},
  {include = "gridencoder"},
  {include = "raymarching"},
  {include = "shencoder"},
  {include = "torch_ngp"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torch-ema = "^0.3"
ninja = "^1.11.1"
trimesh = "^3.19.4"
opencv-python = "^4.7.0.68"
tensorboardx = "^2.5.1"
torch = "^1.13.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
tqdm = "^4.64.1"
matplotlib = "^3.6.3"
pymcubes = "^0.1.4"
rich = "^13.3.1"
pysdf = "^0.1.8"
dearpygui = "^1.8.0"
packaging = "^23.0"
scipy = "^1.10.0"
lpips = "^0.1.4"
imageio = "^2.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
